@@ -1,3 +1,7 @@
+2019-02-19  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert: Better error message in case of OCSP failure
+
 2019-02-08  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert: Check the readability of the certificate file
